<resources>
    <string name="app_name">firebaseApp</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="sign_up">Sign up</string>
    <string name="already_registered_log_in">Already registered? Log In</string>
    <string name="send">Send</string>
    <string name="profile_logged_in">profile logged in</string>
</resources>