<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingHorizontal="35dp">


    <EditText
        android:inputType="textEmailAddress"
        android:textSize="19sp"
        android:hint="@string/email_address"
        android:id="@+id/loginEmailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"/>

    <EditText
        android:inputType="textPassword"
        android:textSize="19sp"
        android:hint="@string/password"
        android:id="@+id/loginPasswordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp" />

    <Button
        android:id="@+id/loginButton"
        android:text="@string/log_in"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginBottom="35dp" />

    <TextView
        android:id="@+id/ForgotPasswordButton"
        android:text="@string/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        />

    <TextView
        android:id="@+id/notRegisteredButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account_sign_up"
        android:textSize="19sp" />

</androidx.appcompat.widget.LinearLayoutCompat>