<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".SignupActivity"
    android:paddingHorizontal="20dp">

    <EditText
        android:id="@+id/signupEmailInput"
        android:hint="@string/email_address"
        android:textSize="19sp"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"/>

    <EditText
        android:id="@+id/signupPasswordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textSize="19sp"
        android:hint="@string/password"
        android:layout_marginVertical="20dp"
        android:layout_marginBottom="15dp"/>

    <Button
        android:id="@+id/signupButton"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:text="@string/sign_up"
        android:layout_marginBottom="35dp"/>

    <TextView
        android:id="@+id/alreadyRegisteredButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_registered_log_in"/>
</androidx.appcompat.widget.LinearLayoutCompat>